'nav bar edited

--- a/index.html
+++ b/index.html
@@ -12,6 +12,21 @@
 </head>
 
 <body>
+    <header class= "nav-bar">
+        <div>
+            <img src= "assets/lambda-black.png">
+            <a href= "index.html">Home</a>
+            <a href= "about.html">About</a>
+            <a href= "#">Products</a>
+            <a href= "#">Blog</a>
+            <a href= "#">Contact</a>
+        </div>
+    </header>
+
+    <div class= "nav-img">
+        <img src="assets/jumbo.jpg">
+    </div>
+    
     <div class="container">
    
         <section class="top-content">
